infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: soonagi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - soonagi.com
        - stream.soonagi.com
      secretName: soonagi-app-tls
  rules:
    - host: soonagi.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: www-svc
                port:
                  number: 3000
    - host: stream.soonagi.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: stream-svc
                port:
                  number: 8080
